Fixed z-index issue

--- a/less/custom.less
+++ b/less/custom.less
@@ -3566,6 +3566,10 @@ input.form-control[data-name="quick-search"] {
     vertical-align: bottom;
 }
 
+.input-group .form-control {
+    z-index: inherit;
+}
+
 // admin iframe
 .admin-content iframe {
     box-shadow: var(--reset-shadows);
@@ -3676,10 +3680,6 @@ input.form-control[data-name="quick-search"] {
 .selectize-dropdown .optgroup-header {
     padding-top: 5px;
     padding-bottom: 5px;
-}
-
-.form-control.selectize-control.single {
-    z-index: 3;
 }
 
 // checkboxes
